--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face { 
-  font-family: 'Roboto Regular'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-regular.woff2') format('woff2'), 
        url('../fonts/roboto-regular.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-regular.woff') format('woff'); 
@@ -8,7 +8,7 @@
   font-display: swap;
 }
 @font-face { 
-  font-family: 'Roboto Light'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-light.woff2') format('woff2'), 
        url('../fonts/roboto-light.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-light.woff') format('woff'); 
@@ -17,7 +17,7 @@
   font-display: swap;
 }
 @font-face { 
-  font-family: 'Roboto Bold'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-bold.woff2') format('woff2'), 
        url('../fonts/roboto-bold.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-bold.woff') format('woff'); 
@@ -27,7 +27,7 @@
 }
 
 @font-face { 
-  font-family: 'Roboto Black'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-black.woff2') format('woff2'), 
        url('../fonts/roboto-black.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-black.woff') format('woff'); 
@@ -37,7 +37,7 @@
 }
 
 @font-face { 
-  font-family: 'Roboto LighItalic'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-lightitalic.woff2') format('woff2'), 
        url('../fonts/roboto-lightitalic.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-lightitalic.woff') format('woff'); 
@@ -47,7 +47,7 @@
 }
 
 @font-face { 
-  font-family: 'Roboto Medium'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-medium.woff2') format('woff2'), 
        url('../fonts/roboto-medium.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-medium.woff') format('woff'); 
@@ -57,7 +57,7 @@
 }
 
 @font-face { 
-  font-family: 'Roboto Thin'; 
+  font-family: 'Roboto'; 
   src: url('../fonts/roboto-thin.woff2') format('woff2'), 
        url('../fonts/roboto-thin.ttf')  format('truetype'), /* Только если нужна поддержка старых Android, иначе закомментировать */ 
        url('../fonts/roboto-thin.woff') format('woff'); 
