--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,3 +2,79 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+.page {
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.625;
+  color: #000;
+}
+/* Block - btn */
+.btn {
+  border: none;
+  background: #f9c620;
+  -webkit-transition: background 200ms;
+  -o-transition: background 200ms;
+  transition: background 200ms;
+}
+.btn:hover {
+  background: #e0b015;
+  cursor: pointer;
+}
+.btn--header {
+  width: 167px;
+}
+/* Block - header */
+.header {
+  height: 58px;
+  line-height: 58px;
+}
+.header__inner {
+  max-width: 1220px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+/* Block - menu */
+.menu {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  font-weight: 700;
+  font-size: 14px;
+}
+.menu__list {
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+.menu__link {
+  padding: 0 15px;
+  text-decoration: none;
+  color: #000;
+}
+.menu__phone {
+  padding: 0 33px;
+}
+/* Block - phone */
+.phone {
+  font-weight: 900;
+  font-size: 20px;
+  font-style: normal;
+  text-decoration: none;
+  color: #000;
+}
