--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,81 @@
+@btnColor: #f9c620;
+@btnHoverColor: #e0b015;
 
 * {
 	box-sizing: border-box;
 }
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
 .page {
+	padding: 0;
+	margin: 0;
+
+	font-family: "Roboto", Arial, sans-serif;
+	font-size: 16px;
+	line-height: 1.625;
+	color: #000;
+}
+/* Block - btn */
+.btn {
+	border: none;
+	background: @btnColor;
+
+	transition: background 200ms;
+}
+.btn:hover {
+	background: @btnHoverColor;
+	cursor: pointer;
+}
+.btn--header {
+	width: 167px;
+}
+/* Block - header */
+.header {
+	height: 58px;
+	line-height: 58px;
+}
+
+.header__inner {
+	max-width: 1220px;
+	margin: 0 auto;
+	display: flex;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+/* Block - menu */
+
+.menu {
+	flex: 1;
+	font-weight: 700;
+	font-size: 14px;
+}
+.menu__list {
+	padding: 0;
+	margin: 0;
+	display: flex;
+
+	list-style: none;
+}
+.menu__link {
+	padding: 0 15px;
+	text-decoration: none;
+	color: #000;
+}
+.menu__phone {
+	padding: 0 33px;
+}
+
+/* Block - phone */
+.phone {
+	font-weight: 900;
+	font-size: 20px;
+	font-style: normal;
+	text-decoration: none;
+	color: #000;
 }
