Иконки для следующей секции

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -45,7 +45,7 @@
 }
 
 .header__inner {
-	max-width: 1220px;
+	max-width: 1200px;
 	margin: 0 auto;
 	display: flex;
 	padding-left: 15px;
@@ -70,6 +70,9 @@
 	padding: 0 15px;
 	text-decoration: none;
 	color: #000;
+}
+.menu__list .menu__item:first-child .menu__link {
+	padding-left: 0;
 }
 .menu__phone {
 	padding: 0 33px;
