--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@
   line-height: 58px;
 }
 .header__inner {
-  max-width: 1220px;
+  max-width: 1200px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -70,6 +70,9 @@
   padding: 0 15px;
   text-decoration: none;
   color: #000;
+}
+.menu__list .menu__item:first-child .menu__link {
+  padding-left: 0;
 }
 .menu__phone {
   padding: 0 33px;
