--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,6 @@
 @btnColor: #f9c620;
 @btnHoverColor: #e0b015;
-
+@mainBgPage: #eee;
 * {
 	box-sizing: border-box;
 }
@@ -19,6 +19,8 @@
 	font-size: 16px;
 	line-height: 1.625;
 	color: #000;
+
+	background-color: @mainBgPage;
 }
 /* Block - btn */
 .btn {
@@ -42,6 +44,7 @@
 .header {
 	height: 58px;
 	line-height: 58px;
+	background: #fff;
 }
 
 .header__inner {
