--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,7 @@
   font-size: 16px;
   line-height: 1.625;
   color: #000;
+  background-color: #eee;
 }
 /* Block - btn */
 .btn {
@@ -40,6 +41,7 @@
 .header {
   height: 58px;
   line-height: 58px;
+  background: #fff;
 }
 .header__inner {
   max-width: 1200px;
