--- a/src/less/style.less
+++ b/src/less/style.less
@@ -42,15 +42,15 @@
 }
 /* Block - header */
 .header {
-	height: 58px;
 	line-height: 58px;
 	background: #fff;
 }
 
 .header__inner {
+	display: flex;
+	flex-wrap: wrap;
 	max-width: 1200px;
 	margin: 0 auto;
-	display: flex;
 	padding-left: 15px;
 	padding-right: 15px;
 }
@@ -59,6 +59,7 @@
 
 .menu {
 	flex: 1;
+
 	font-weight: 700;
 	font-size: 14px;
 }
@@ -130,4 +131,48 @@
 
 	background: url(../img/main-screen_arrow.png) no-repeat;
 	background-size: cover;
+}
+
+/* Block - adv */
+
+.adv__inner {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	max-width: 1200px;
+	padding: 0 15px;
+	margin: 0 auto;
+	
+}
+
+.adv__item {
+	padding-left: 67px;
+	margin-top: 44px;
+	margin-bottom: 37px;
+
+	line-height: 20px;
+	
+	background-repeat: no-repeat;
+	background-position-y: 3px;
+}
+
+.adv__item--present {
+	background-image: url(../img/icon_present.svg);
+	background-size: 45px;
+}
+.adv__item--cheaper {
+	background-image: url(../img/icon_cheaper.svg);
+	background-size: 38px;
+}
+
+.adv__item--time {
+	background-image: url(../img/icon_time.svg);
+	background-size: 34px;
+}
+.adv__headline {
+	margin: 0;
+	margin-bottom: 20px;
+}
+.adv__text {
+	margin: 0;
 }
