Набросок секции с примерами работ

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+img {
+  width: 100%;
+  height: auto;
+}
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -179,6 +183,7 @@
 .stats__inner {
   max-width: 1280px;
   margin: 0 auto;
+  margin-bottom: 95px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -243,4 +248,64 @@
   font-size: 53px;
   font-weight: 900;
   line-height: 1.2;
+}
+/* Block - projects */
+.projects {
+  background-color: #fff;
+}
+.projects__inner {
+  max-width: 1310px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.projects__header {
+  width: 45%;
+}
+.projects__headline,
+.projects__descr {
+  margin: 0;
+}
+.projects__headline {
+  margin-top: 78px;
+  margin-bottom: 22px;
+  font-size: 24px;
+  line-height: 1.4;
+}
+.projects__descr {
+  margin-bottom: 45px;
+}
+.projects__examples {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.projects__example {
+  position: relative;
+  width: 421px;
+}
+.projects__slider {
+  height: 252px;
+}
+.projects__name {
+  height: 65px;
+  padding-left: 17px;
+  padding-right: 80px;
+  padding-top: 14px;
+  line-height: 1.42;
+  font-size: 14px;
+  background-color: #eee;
+}
+.projects__count-slide {
+  position: absolute;
+  right: 20px;
+  bottom: 14px;
+  color: #727272;
+  font-size: 20px;
+  font-weight: 500;
 }
