Готовая секция без слайдеров и иконок ссылки

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -289,7 +289,8 @@ img {
   position: relative;
   width: 421px;
 }
-.projects__slider {
+.projects__slider,
+.projects__pict {
   height: 252px;
 }
 .projects__name {
@@ -301,11 +302,17 @@ img {
   font-size: 14px;
   background-color: #eee;
 }
-.projects__count-slide {
+.projects__count-slide,
+.projects__link {
   position: absolute;
   right: 20px;
   bottom: 14px;
   color: #727272;
   font-size: 20px;
   font-weight: 500;
+}
+.projects__link {
+  width: 32px;
+  height: 32px;
+  background-color: red;
 }
