--- a/src/less/style.less
+++ b/src/less/style.less
@@ -308,11 +308,11 @@ img {
 
 .projects__example {
 	position: relative;
-
 	width: 421px;
 }
 
-.projects__slider {
+.projects__slider,
+.projects__pict {
 	height: 252px;
 }
 
@@ -328,7 +328,8 @@ img {
 	background-color: @mainBgPage;
 }
 
-.projects__count-slide {
+.projects__count-slide,
+.projects__link {
 	position: absolute;
 	right: 20px;
 	bottom: 14px;
@@ -336,6 +337,12 @@ img {
 	color: #727272;
 	font-size: 20px;
 	font-weight: 500;
+}
+
+.projects__link {
+	width: 32px;
+	height: 32px;
+	background-color: red;
 }
 
 
