--- a/src/less/style.less
+++ b/src/less/style.less
@@ -224,10 +224,15 @@ img {
 
 .stats__main-text {
 	margin-top: 50px;
-
+	
 	font-size: 24px;
 	font-weight: 700;
 	line-height: 34px;
+
+	background-image: url(../img/icon_quote.svg);
+	background-repeat: no-repeat;
+	background-size: 40px;
+	background-position-y: 8px;
 }
 
 .stats__descr {
@@ -342,7 +347,36 @@ img {
 .projects__link {
 	width: 32px;
 	height: 32px;
-	background-color: red;
+
+	
 }
+.projects__icon *,
+.projects__arrow-path {
+	transition: all 400ms;
+}
+.projects__link:hover svg * {
+	stroke: #ebba16;
+}
+
+.projects__arrow {
+	position: absolute;
+	top: 117px;
+	width: 12px;
+	height: 20px;
+}
+.projects__arrow:hover {
+	cursor: pointer;
+}
+.projects__arrow:hover .projects__arrow-path {
+	stroke: #d8aa17;
+}
+.projects__arrow--prev {
+	left: 18px;
+	z-index: 10;
+}
+.projects__arrow--next {
+	right: 18px;
+}
+
 
 
