Готова секция готовые работы

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -177,13 +177,11 @@ img {
   margin: 0;
 }
 /* Block - stats */
-.stats {
-  height: 550px;
-}
 .stats__inner {
+  height: 550px;
   max-width: 1280px;
   margin: 0 auto;
-  margin-bottom: 95px;
+  margin-bottom: 97px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -262,6 +260,7 @@ img {
   margin: 0 auto;
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 73px;
 }
 .projects__header {
   width: 45%;
@@ -271,13 +270,12 @@ img {
   margin: 0;
 }
 .projects__headline {
-  margin-top: 78px;
-  margin-bottom: 22px;
+  margin-bottom: 15px;
   font-size: 24px;
   line-height: 1.4;
 }
 .projects__descr {
-  margin-bottom: 45px;
+  margin-bottom: 32px;
 }
 .projects__examples {
   display: -webkit-box;
@@ -292,6 +290,7 @@ img {
 .projects__example {
   position: relative;
   width: 421px;
+  margin-top: 12px;
 }
 .projects__slider,
 .projects__pict {
