--- a/src/less/style.less
+++ b/src/less/style.less
@@ -194,14 +194,11 @@ img {
 
 
 /* Block - stats */
-.stats {
-	height: 550px;
-}
-
 .stats__inner {
+	height: 550px;
 	max-width: 1280px;
 	margin: 0 auto;
-	margin-bottom: 95px;
+	margin-bottom: 97px;
 	display: flex;
 	flex-wrap: wrap;
 	background: #e0e0e0 url(../img/stats_bg.jpg) no-repeat;
@@ -283,6 +280,7 @@ img {
 	margin: 0 auto;
 	padding-right: 15px;
 	padding-left: 15px;
+	padding-top: 73px;
 }
 
 .projects__header {
@@ -294,15 +292,14 @@ img {
 	margin: 0;
 }
 .projects__headline {
-	margin-top: 78px;
-	margin-bottom: 22px;
+	margin-bottom: 15px;
 
 	font-size: 24px;
 	line-height: 1.4;
 }
 
 .projects__descr {
-	margin-bottom: 45px;
+	margin-bottom: 32px;
 }
 
 .projects__examples {
@@ -314,6 +311,7 @@ img {
 .projects__example {
 	position: relative;
 	width: 421px;
+	margin-top: 12px;
 }
 
 .projects__slider,
