--- a/src/less/style.less
+++ b/src/less/style.less
@@ -190,10 +190,15 @@ img {
 }
 .adv__text {
 	margin: 0;
+
+	font-weight: 300;
 }
 
 
 /* Block - stats */
+.stats {
+	font-weight: 300;
+}
 .stats__inner {
 	height: 550px;
 	max-width: 1280px;
@@ -253,6 +258,8 @@ img {
 .stats__num {
 	width: 147px;
 	display: inline-block;
+
+	font-weight: normal;
 }
 
 .stats__num:nth-child(3),
@@ -273,12 +280,15 @@ img {
 
 /* Block - projects */
 .projects {
+	font-weight: 300;
+
 	background-color: #fff;
 }
 .projects__inner {
 	max-width: 1280px;
 	margin: 0 auto;
 	padding-top: 73px;
+	padding-bottom: 210px;
 }
 
 .projects__header {
@@ -376,4 +386,79 @@ img {
 }
 
 
+/* Block - price */
+.price {
+	font-weight: 300;
+}
+.price__inner {
+	max-width: 1280px;
+	margin: 0 auto;
+	margin-top: -136px;
+	padding-top: 89px;
+	padding-bottom: 97px;
+	padding-left: 155px;
+	padding-right: 155px;
 
+	background: #f9cb31 url(../img/price_bg.jpg) no-repeat;
+	background-size: cover;
+
+}
+
+.price__header {
+	text-align: center;
+	max-width: 748px;
+	margin: 0 auto;
+}
+
+.price__headline {
+	margin-bottom: 35px;
+}
+
+.price__text {
+	margin: 0;
+	margin-bottom: 18px;
+}
+
+.price__text--action {
+	margin-bottom: 25px;
+
+	font-size: 20px;
+}
+
+.price__call-to-action {
+	position: relative;
+
+	color: #000;
+	text-decoration: none;
+}
+
+.price__call-to-action:after {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+
+	height: 1px;
+	width: 100%;
+	display: block;
+	content: "";
+
+	background-color: #000;
+}
+
+.price__list {
+	padding: 0;
+	margin: 0;
+	display: flex;
+	flex-wrap: wrap;
+
+	list-style: none;
+}
+
+.price__item {
+	flex: 1;
+	flex-basis: 33%;
+	width: 33%;
+	height: 187px;
+	border: 1px solid #000;
+	background-color: #fff;
+}
