--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,9 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+html {
+  overflow-x: hidden;
+}
 img {
   width: 100%;
   height: auto;
@@ -416,6 +419,23 @@ img {
       flex-basis: 33%;
   width: 33%;
   height: 187px;
-  border: 1px solid #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 68px;
+  padding-right: 62px;
+  border: 1px solid #e6e6e6;
   background-color: #fff;
+}
+.price__faq {
+  width: 15px;
+  height: 15px;
+  display: inline-block;
 }
