--- a/src/less/style.less
+++ b/src/less/style.less
@@ -4,7 +4,9 @@
 * {
 	box-sizing: border-box;
 }
-
+html {
+	overflow-x: hidden;
+}
 img {
 	width: 100%;
 	height: auto;
@@ -459,6 +461,18 @@ img {
 	flex-basis: 33%;
 	width: 33%;
 	height: 187px;
-	border: 1px solid #000;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding-left: 68px;
+	padding-right: 62px;
+
+	border: 1px solid #e6e6e6;
 	background-color: #fff;
+}
+
+.price__faq {
+	width: 15px;
+	height: 15px;
+	display: inline-block;
 }
