--- a/src/less/style.less
+++ b/src/less/style.less
@@ -457,22 +457,73 @@ img {
 }
 
 .price__item {
+	position: relative;
+
 	flex: 1;
 	flex-basis: 33%;
 	width: 33%;
 	height: 187px;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	padding-left: 68px;
-	padding-right: 62px;
+	padding-top: 60px;
+	padding-left: 70px;
+	padding-right: 50px;
 
 	border: 1px solid #e6e6e6;
 	background-color: #fff;
+
+	transition: all 200ms;
+}
+
+.price__item:hover {
+	box-shadow: 0px 2px 16px 0px rgba(65, 65, 63, 0.25); 
+	cursor: pointer;
+	z-index: 10;
+}
+
+.price__main-price,
+.price__name {
+	margin: 0;
+}
+
+.price__main-price {
+	margin-bottom: 18px;
+
+	font-size: 24px;
+	font-weight: 900;
+	color: #727272;
+	line-height: 18px;
+}
+
+.price__rouble {
+	font-family: "Rouble";
+	font-size: 18px;
+	font-weight: normal;
+	font-style: normal;
+}
+
+.price__number {
+	font-size: 50px;
+	font-style: normal;
+}
+
+.price__name {
+	line-height: 1.375;
 }
 
 .price__faq {
+	vertical-align: middle;
 	width: 15px;
 	height: 15px;
 	display: inline-block;
+	border-radius: 50%;
+	background-color: red;
+	margin-left: 5px;
+}
+
+.price__descr {
+	position: absolute;
+	left: 83.54037267080745%;
+}
+/* Block - descr */
+.descr {
+	position: absolute;
 }
