--- a/src/css/style.css
+++ b/src/css/style.css
@@ -491,6 +491,8 @@ img {
   z-index: 20;
   display: none;
   font-weight: normal;
+  -webkit-box-shadow: 0px 8px 49px 0px rgba(33, 47, 71, 0.22);
+          box-shadow: 0px 8px 49px 0px rgba(33, 47, 71, 0.22);
   background-color: #fff;
   border: 6px solid #ffe400;
 }
