--- a/src/less/style.less
+++ b/src/less/style.less
@@ -543,7 +543,8 @@ img {
 	z-index: 20;
 	display: none;
 	font-weight: normal;
-
+	
+	box-shadow: 0px 8px 49px 0px rgba(33, 47, 71, 0.22); 
 	background-color: #fff;
 	border: 6px solid #ffe400;
 	
