--- a/src/less/style.less
+++ b/src/less/style.less
@@ -513,17 +513,41 @@ img {
 }
 
 .price__faq {
+	position: relative;
+
 	vertical-align: middle;
-	width: 15px;
-	height: 15px;
+	width: 20px;
+	height: 20px;
 	display: inline-block;
-	border-radius: 50%;
-	background-color: red;
 	margin-left: 5px;
+
+	background: url(../img/icon_faq.svg) no-repeat;
 }
+
 .price__faq:hover {
 	cursor: pointer;
 }
+
+.price__faq:after {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+	content: "";
+	display: block;
+
+	background: url(../img/icon_faq_hover.svg) no-repeat;
+	opacity: 0;
+	transition: opacity 200ms;
+}
+
+.price__faq:hover:after {
+	opacity: 1;
+	cursor: pointer;
+}
+
 .price__faq:hover ~ .descr,
 .descr:hover {
 	display: block;
@@ -623,4 +647,59 @@ img {
 	display: block;
 
 	background-color: green;
+}
+
+
+
+/* Block - feedback */
+
+.feedback {
+	height: 497px;
+}
+
+.feedback__inner {
+	max-width: 1280px;
+	margin: 0 auto;
+	display: flex;
+}
+
+/* Block - feed-item */
+
+.feed-item {
+	width: 50%;
+	padding-left: 80px;
+	padding-top: 87px;
+	padding-right: 63px;
+}
+
+.feed-item--steps {
+	background-color: #fff;
+}
+
+.feed-item--reviews {
+	background-color: #f6f6f6;
+}
+
+.feed-item__headline {
+	position: relative;
+
+	margin-bottom: 54px;
+
+	font-size: 16px;
+	font-weight: 700;
+	text-transform: uppercase;
+	line-height: 52px;
+}
+
+.feed-item__headline:after {
+	position: absolute;
+	bottom: -4px;
+	left: 0;
+
+	display: block;
+	content: "";
+	width: 94px;
+	height: 4px;
+
+	background-color: #f9c720;
 }
