--- a/src/css/style.css
+++ b/src/css/style.css
@@ -491,14 +491,13 @@ img {
   opacity: 1;
   cursor: pointer;
 }
-.price__faq:hover ~ .descr,
-.descr:hover {
+.price__faq:hover .descr {
   display: block;
 }
 .price__descr {
   position: absolute;
-  left: 87.54037267080745%;
-  top: -35px;
+  left: calc(100% + 20px);
+  top: -168px;
   padding-left: 19px;
   padding-right: 19px;
   padding-top: 22px;
@@ -519,9 +518,15 @@ img {
   border: 15px solid transparent;
   border-right: 15px solid #ffe400;
 }
+.price__descr--corner {
+  top: 40px;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
 .price__descr--corner:before {
   top: -35px;
-  left: 230px;
+  left: 205px;
   -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
           transform: rotate(90deg);
