--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,6 +55,7 @@ img {
 /* Block - header */
 .header {
   line-height: 58px;
+  font-stretch: expanded;
   background: #fff;
 }
 .header__inner {
@@ -74,7 +75,7 @@ img {
       -ms-flex: 1;
           flex: 1;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 15px;
 }
 .menu__list {
   padding: 0;
@@ -459,6 +460,7 @@ img {
 }
 .price__name {
   line-height: 1.375;
+  width: auto;
   display: inline;
 }
 .price__faq {
@@ -615,19 +617,20 @@ img {
 .feed-item {
   width: 50%;
   padding-left: 80px;
-  padding-top: 87px;
+  padding-top: 60px;
   padding-right: 63px;
 }
 .feed-item--steps {
   background-color: #fff;
 }
 .feed-item--reviews {
+  padding-left: 97px;
   background-color: #f6f6f6;
 }
 .feed-item__headline {
   position: relative;
   margin-bottom: 54px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 52px;
