--- a/src/less/style.less
+++ b/src/less/style.less
@@ -62,6 +62,7 @@ img {
 /* Block - header */
 .header {
 	line-height: 58px;
+	font-stretch: expanded;
 	background: #fff;
 }
 
@@ -80,7 +81,7 @@ img {
 	flex: 1;
 
 	font-weight: 700;
-	font-size: 14px;
+	font-size: 15px;
 }
 .menu__list {
 	padding: 0;
@@ -509,6 +510,7 @@ img {
 
 .price__name {
 	line-height: 1.375;
+	width: auto;
 	display: inline;
 }
 
@@ -551,6 +553,7 @@ img {
 .price__faq:hover  .descr {
 	display: block;
 }
+
 .price__descr {
 	position: absolute;
 	left: calc(100% + 20px);
@@ -697,7 +700,7 @@ img {
 .feed-item {
 	width: 50%;
 	padding-left: 80px;
-	padding-top: 87px;
+	padding-top: 60px;
 	padding-right: 63px;
 }
 
@@ -705,7 +708,9 @@ img {
 	background-color: #fff;
 }
 
-.feed-item--reviews {
+.feed-item--reviews {	
+	padding-left: 97px;
+
 	background-color: #f6f6f6;
 }
 
@@ -714,7 +719,7 @@ img {
 
 	margin-bottom: 54px;
 
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: 700;
 	text-transform: uppercase;
 	line-height: 52px;
