--- a/src/css/style.css
+++ b/src/css/style.css
@@ -618,7 +618,9 @@ img {
   width: 50%;
   padding-left: 80px;
   padding-top: 60px;
-  padding-right: 63px;
+  padding-right: 50px;
+  padding-bottom: 130px;
+  line-height: 24px;
 }
 .feed-item--steps {
   background-color: #fff;
@@ -645,6 +647,23 @@ img {
   height: 4px;
   background-color: #f9c720;
 }
+.feed-item__slider {
+  position: relative;
+  height: 100%;
+}
+.feed-item__arrow {
+  position: absolute;
+  bottom: -7px;
+  width: 87px;
+  height: 82px;
+  background-color: #ebebeb;
+}
+.feed-item__arrow--next {
+  right: -50px;
+}
+.feed-item__arrow--prev {
+  right: 39px;
+}
 .feed-item__number {
   float: left;
   line-height: 103px;
@@ -667,4 +686,12 @@ img {
 .feed-item__step-content,
 .feed-item__step-name {
   padding-left: 147px;
+}
+.feed-item__review-content {
+  margin-top: -5px;
+  font-weight: 300;
+}
+.feed-item__author {
+  font-size: 14px;
+  font-weight: 700;
 }
