--- a/src/less/style.less
+++ b/src/less/style.less
@@ -701,7 +701,10 @@ img {
 	width: 50%;
 	padding-left: 80px;
 	padding-top: 60px;
-	padding-right: 63px;
+	padding-right: 50px;
+	padding-bottom: 130px;
+
+	line-height: 24px;
 }
 
 .feed-item--steps {
@@ -738,6 +741,30 @@ img {
 	background-color: #f9c720;
 }
 
+.feed-item__slider {
+	position: relative;
+
+	height: 100%;
+}
+
+.feed-item__arrow {
+	position: absolute;
+	bottom: -7px;
+
+	width: 87px;
+	height: 82px;
+
+	background-color: #ebebeb;
+}
+
+.feed-item__arrow--next {
+	right: -50px;
+}
+
+.feed-item__arrow--prev {
+	right: 39px;
+}
+
 .feed-item__number {
 	float: left;
 	line-height: 103px;
@@ -765,3 +792,15 @@ img {
 .feed-item__step-name {
 	padding-left: 147px;
 }
+
+.feed-item__review-content {
+	margin-top: -5px;
+
+	font-weight: 300;
+}
+
+.feed-item__author {
+	font-size: 14px;
+	font-weight: 700;
+}
+
