--- a/src/less/style.less
+++ b/src/less/style.less
@@ -757,6 +757,10 @@ img {
 	background-color: #ebebeb;
 }
 
+.feed-item__arrow:hover {
+	cursor: pointer;
+}
+
 .feed-item__arrow--next {
 	right: -50px;
 }
