Формы без проверок

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,9 @@ img {
 /* Block - input */
 .input {
   height: 30px;
+  width: 100%;
+  font-size: 16px;
+  color: #fff;
   border: none;
   border-bottom: 1px solid #656568;
   background-color: transparent;
@@ -806,11 +809,23 @@ img {
 /* Block - form */
 .form__field {
   position: relative;
+  margin-bottom: 40px;
+  display: block;
+  width: 100%;
   height: 30px;
+}
+.form__field--must:after {
+  position: absolute;
+  right: 0;
+  bottom: 5px;
+  content: "*";
+  display: block;
+  color: #b35d5d;
+  font-size: 14px;
 }
 .form__name {
   position: absolute;
-  top: 5px;
+  top: 0;
   left: 0;
   font-size: 14px;
   font-weight: 500;
@@ -823,7 +838,7 @@ img {
   cursor: text;
 }
 .form__name--active {
-  top: -10px;
+  top: -15px;
   font-size: 11px;
   color: #9f9f9f;
 }
