--- a/src/less/style.less
+++ b/src/less/style.less
@@ -37,6 +37,10 @@ img {
 /* Block - input */
 .input {
 	height: 30px;
+	width: 100%;
+
+	font-size: 16px;
+	color: #fff;
 
 	border: none;
 	border-bottom: 1px solid #656568;
@@ -48,6 +52,7 @@ img {
 .input:focus {
 	border-bottom-color: #828283;
 }
+
 /* Block - btn */
 .btn {
 	border: none;
@@ -941,13 +946,27 @@ img {
 /* Block - form */
 .form__field {
 	position: relative;
-
+	
+	margin-bottom: 40px;
+	display: block;
+	width: 100%;
 	height: 30px;
 }
 
+.form__field--must:after {
+	position: absolute;
+	right: 0;
+	bottom: 5px;
+
+	content: "*";
+	display: block;
+
+	color: #b35d5d;
+	font-size: 14px;
+}
 .form__name {
 	position: absolute;
-	top: 5px;
+	top: 0;
 	left: 0;
 
 	font-size: 14px;
@@ -962,7 +981,7 @@ img {
 }
 
 .form__name--active {
-	top: -10px;
+	top: -15px;
 
 	font-size: 11px;
 	color: #9f9f9f;
