Формы без проверки

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -55,6 +55,9 @@ img {
 
 /* Block - btn */
 .btn {
+	font-size: 17px;
+	font-weight: 300;
+
 	border: none;
 	background: @btnColor;
 
@@ -71,6 +74,9 @@ img {
 .btn--main-screen {
 	height: 62px;
 	width: 230px;
+}
+.btn--form {
+	padding: 24px 45px;
 }
 
 .headline {
@@ -953,6 +959,10 @@ img {
 	height: 30px;
 }
 
+.form__field--last {
+	margin-bottom: 15px;
+}
+
 .form__field--must:after {
 	position: absolute;
 	right: 0;
@@ -985,5 +995,11 @@ img {
 
 	font-size: 11px;
 	color: #9f9f9f;
+}
+
+.g-recaptcha {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 29px;
 }
 
