--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,8 @@ img {
 }
 /* Block - btn */
 .btn {
+  font-size: 17px;
+  font-weight: 300;
   border: none;
   background: #f9c620;
   -webkit-transition: background 200ms;
@@ -59,6 +61,9 @@ img {
 .btn--main-screen {
   height: 62px;
   width: 230px;
+}
+.btn--form {
+  padding: 24px 45px;
 }
 .headline {
   padding: 0;
@@ -814,6 +819,9 @@ img {
   width: 100%;
   height: 30px;
 }
+.form__field--last {
+  margin-bottom: 15px;
+}
 .form__field--must:after {
   position: absolute;
   right: 0;
@@ -841,4 +849,9 @@ img {
   top: -15px;
   font-size: 11px;
   color: #9f9f9f;
+}
+.g-recaptcha {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 29px;
 }
