--- a/src/less/style.less
+++ b/src/less/style.less
@@ -926,7 +926,9 @@ img {
 	max-width: 1170px;
 	margin: 0 auto;
 	display: flex;
+	justify-content: space-between;
 	padding-top: 92px;
+	padding-bottom: 140px;
 }
 
 .callback__request {
@@ -1001,5 +1003,35 @@ img {
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 29px;
+}
+
+
+/* Block - contacts */
+.contacts {
+	width: 37.60683760683761%;
+	min-height: 450px;
+	align-self: flex-end;
+
+	background-color: #fff;
+}
+
+.contacts__banner {
+	padding: 35px 52px;
+	
+	border-top: 1px solid #eaeaea;
+	border-bottom: 1px solid #eaeaea;
+}
+
+.contacts__banner--address {
+	padding: 30px 52px;
+}
+
+
+.contacts__name {
+	margin: 0;
+	margin-bottom: 10px;
+
+	font-weight: 500;
+	font-size: 19px;
 }
 
