--- a/src/less/style.less
+++ b/src/less/style.less
@@ -30,8 +30,6 @@ img {
 	color: #000;
 
 	background-color: @mainBgPage;
-
-	height: 10000px;
 }
 
 /* Block - input */
@@ -1035,3 +1033,20 @@ img {
 	font-size: 19px;
 }
 
+
+
+
+/* Footer */
+.footer {
+	height: 69px;
+
+	background-color: #28282a;
+}
+
+.footer__year {
+	max-width: 1170px;
+	margin: 0 auto;
+
+	color: #545454;
+	line-height: 69px;
+}
