--- a/src/css/style.css
+++ b/src/css/style.css
@@ -676,6 +676,9 @@ img {
   height: 82px;
   background-color: #ebebeb;
 }
+.feed-item--reviews .feed-item__arrow {
+  background-color: #fff;
+}
 .feed-item__arrow:hover {
   cursor: pointer;
 }
@@ -684,6 +687,22 @@ img {
 }
 .feed-item__arrow--prev {
   right: 39px;
+}
+.feed-item__arrow svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.feed-item__arrow svg path {
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
+}
+.feed-item__arrow:hover svg path {
+  stroke: #f8c932;
 }
 .feed-item__number {
   float: left;
