--- a/src/less/style.less
+++ b/src/less/style.less
@@ -387,13 +387,17 @@ img {
 
 	
 }
-.projects__icon *,
-.projects__arrow-path {
+.projects__icon {
+	display: inline-block;
+	width: 32px;
+	height: 32px;
+
+	background: url(../img/icon_link.svg) no-repeat;
+	background-size: cover;
+
 	transition: all 400ms;
 }
-.projects__link:hover svg * {
-	stroke: #ebba16;
-}
+
 
 .projects__arrow {
 	position: absolute;
