--- a/src/css/style.css
+++ b/src/css/style.css
@@ -348,6 +348,7 @@ img {
   height: 32px;
 }
 .projects__icon {
+  position: relative;
   display: inline-block;
   width: 32px;
   height: 32px;
@@ -356,6 +357,25 @@ img {
   -webkit-transition: all 400ms;
   -o-transition: all 400ms;
   transition: all 400ms;
+}
+.projects__icon:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background: url(../img/icon_link_hover.svg) no-repeat;
+  background-size: cover;
+  opacity: 0;
+  -webkit-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
+}
+.projects__icon:hover:after {
+  opacity: 1;
+  background-color: #eeeeee;
 }
 .projects__arrow {
   position: absolute;
