--- a/src/less/style.less
+++ b/src/less/style.less
@@ -388,6 +388,8 @@ img {
 	
 }
 .projects__icon {
+	position: relative;
+
 	display: inline-block;
 	width: 32px;
 	height: 32px;
@@ -398,6 +400,29 @@ img {
 	transition: all 400ms;
 }
 
+.projects__icon:after {
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	content: "";
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+
+	background: url(../img/icon_link_hover.svg) no-repeat;
+	background-size: cover;
+	opacity: 0;
+
+	transition: all 200ms;
+}
+
+
+
+.projects__icon:hover:after {
+	opacity: 1;
+	background-color: #eeeeee;
+}
 
 .projects__arrow {
 	position: absolute;
