--- a/src/less/style.less
+++ b/src/less/style.less
@@ -68,6 +68,8 @@ img {
 .btn--header {
 	width: 167px;
 	font-size: 14px;
+
+	background-color: #d1d1d1;
 }
 .btn--main-screen {
 	height: 62px;
@@ -155,6 +157,8 @@ img {
 	line-height: 24px;
 }
 .main-screen__text {
+	margin-top: -10px;
+
 	text-transform: uppercase;
 	color: #d9d9d9;
 	font-size: 17px;
@@ -665,9 +669,12 @@ img {
 }
 
 .descr__headline {
+	margin: 0;
+	padding-right: 50px;
+
 	font-size: 23px;
 	font-weight: 500;
-	margin: 0;
+
 }
 
 .descr__text {
@@ -1066,6 +1073,8 @@ img {
 
 .contacts__banner--address {
 	padding: 30px 52px;
+
+	border-bottom-color: transparent;
 }
 
 
