--- a/src/less/style.less
+++ b/src/less/style.less
@@ -521,8 +521,8 @@ img {
 	position: relative;
 
 	flex: 1;
-	flex-basis: 33%;
-	width: 33%;
+	flex-basis: calc(33% - 5px);
+	width: calc(33% - 5px);
 	height: 187px;
 	padding-top: 60px;
 	padding-left: 70px;
