--- a/src/less/style.less
+++ b/src/less/style.less
@@ -431,8 +431,11 @@ img {
 .projects__arrow {
 	position: absolute;
 	top: 117px;
+
 	width: 12px;
 	height: 20px;
+
+	background-color: transparent;
 }
 .projects__arrow:hover {
 	cursor: pointer;
@@ -522,7 +525,7 @@ img {
 
 	flex: 1;
 	flex-basis: calc(33% - 5px);
-	width: calc(33% - 5px);
+	width: calc(33% - 5px);	
 	height: 187px;
 	padding-top: 60px;
 	padding-left: 70px;
