Аккордеон с вопросами сделан

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -913,7 +913,7 @@ img {
 
 .faq__quest--opened {
 	border-bottom: 1px solid transparent;
-	padding-bottom: 0;
+	// padding-bottom: 0;
 }
 
 .faq__item {
@@ -962,8 +962,6 @@ img {
 
 .faq__answer {
 	display: none;
-
-	transition: all 600ms;
 }
 
 
