--- a/src/less/style.less
+++ b/src/less/style.less
@@ -178,8 +178,8 @@ img {
 	margin: 9px 13px;
 
 
-	background: url(../img/main-screen_arrow.png) no-repeat;
-	background-size: cover;
+	background: url(../img/icons_sprite.png) no-repeat;
+	background-position: -96px -5px;
 }
 
 /* Block - adv */
@@ -729,13 +729,13 @@ img {
 	right: 33px;
 
 	width: 18px;
-	height: 17px;
+	height: 18px;
 	display: block;
 	
 	border: none;
 	outline: none;
-	background: url(../img/icon_close.png) no-repeat;
-	background-size: cover;
+	background: url(../img/icons_sprite.png) no-repeat;
+	background-position: -75px -1px;
 
 	transition: opacity 200ms;
 }
@@ -913,7 +913,6 @@ img {
 
 .faq__quest--opened {
 	border-bottom: 1px solid transparent;
-	// padding-bottom: 0;
 }
 
 .faq__item {
