--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,6 +45,7 @@ img {
   font-weight: 300;
   border: none;
   background: #f9c620;
+  outline: none;
   -webkit-transition: background 200ms;
   -o-transition: background 200ms;
   transition: background 200ms;
@@ -881,12 +882,15 @@ img {
   font-size: 14px;
   font-weight: 500;
   color: #d2d2d2;
-  -webkit-transition: all 200ms;
-  -o-transition: all 200ms;
-  transition: all 200ms;
+  -webkit-transition: all 300ms;
+  -o-transition: all 300ms;
+  transition: all 300ms;
 }
 .form__name:hover {
   cursor: text;
+}
+.form__name--error {
+  color: #aa5a5b;
 }
 .form__name--active {
   top: -15px;
