Медиа для ноутбуков и планшетов

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -71,6 +71,8 @@ img {
 
 .btn--header {
 	width: 167px;
+	height: 58px;
+
 	font-size: 14px;
 
 	background-color: #d1d1d1;
@@ -107,6 +109,9 @@ img {
 	padding-right: 15px;
 }
 
+.header__menu {
+	position: relative;
+}
 /* Block - menu */
 
 .menu {
@@ -132,6 +137,10 @@ img {
 }
 .menu__phone {
 	padding: 0 33px;
+}
+
+.menu__mobile {
+	display: none;
 }
 
 /* Block - phone */
@@ -980,6 +989,7 @@ img {
 	max-width: 1170px;
 	margin: 0 auto;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	padding-top: 92px;
 	padding-bottom: 140px;
