--- a/src/css/media.css
+++ b/src/css/media.css
@@ -1,5 +1,138 @@
-@media screen and (max-width: 1138px) {
+@media screen and (max-width: 1142px) {
+  .header__inner {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .menu {
+    font-size: 13px;
+    text-align: center;
+  }
   .menu__link {
     padding: 0 10px;
+  }
+  .menu__phone {
+    padding: 0 10px;
+  }
+  .phone {
+    font-size: 17px;
+  }
+  .main-screen__headline {
+    font-size: 38px;
+  }
+  .stats__inner {
+    height: auto;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .stats__content,
+  .stats__numbers {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .stats__content {
+    padding: 50px 100px;
+  }
+  .projects__examples {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .price__item {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    width: 50%;
+  }
+  .callback__inner {
+    max-width: 800px;
+  }
+  .callback__request,
+  .contacts {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    width: 100%;
+  }
+  .callback__contacts {
+    margin-top: 40px;
+  }
+}
+@media screen and (max-width: 977px) {
+  .menu {
+    font-size: 20px;
+  }
+  .header__inner {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .menu__mobile {
+    display: block;
+    height: 35px;
+    width: 40px;
+    background-color: transparent;
+    background: url(../img/icon_menu.svg) no-repeat;
+    background-size: cover;
+    border: none;
+    outline: none;
+  }
+  .menu__list {
+    position: absolute;
+    top: 46px;
+    left: -15px;
+    display: none;
+    width: 100vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: auto;
+    z-index: 1;
+    background: #fff;
+  }
+  .price__inner {
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  .feedback {
+    height: auto;
+  }
+  .feedback__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .feed-item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 826px) {
+  .main-screen__text {
+    font-size: 15px;
+  }
+  .main-screen__headline {
+    font-size: 30px;
+  }
+  .projects__header {
+    width: 80%;
+  }
+  .projects__example {
+    width: 80%;
+  }
+  .projects__slider,
+  .projects__pict {
+    height: 400px;
+  }
+  .price__item {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    width: 100%;
+  }
+  .faq__questions {
+    padding: 0 20px;
+  }
+  .callback__inner {
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
