--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,7 @@ img {
 }
 .btn--header {
   width: 167px;
+  height: 58px;
   font-size: 14px;
   background-color: #d1d1d1;
 }
@@ -89,6 +90,9 @@ img {
   padding-left: 15px;
   padding-right: 15px;
 }
+.header__menu {
+  position: relative;
+}
 /* Block - menu */
 .menu {
   -webkit-box-flex: 1;
@@ -115,6 +119,9 @@ img {
 }
 .menu__phone {
   padding: 0 33px;
+}
+.menu__mobile {
+  display: none;
 }
 /* Block - phone */
 .phone {
@@ -835,6 +842,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
